--- a/Object_Detection_Transfer_Learning_with_PyTorch.ipynb
+++ b/Object_Detection_Transfer_Learning_with_PyTorch.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOEThYjzfTi/BaBLNqtuOeH",
+      "authorship_tag": "ABX9TyOg4M978YbgLACltB8pWVsE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,8 +79,6 @@
       "source": [
         "%%shell\n",
         "\n",
-        "# Download TorchVision repo to use some files from\n",
-        "# references/detection\n",
         "git clone https://github.com/pytorch/vision.git\n",
         "cd vision\n",
         "git checkout v0.3.0\n",
@@ -101,8 +99,32 @@
         "colab_type": "text"
       },
       "source": [
-        "**Clone full repository containing**"
+        "**Snow Grooming Object Detection Repository**\n",
+        "\n",
+        "Clone repository created to support this notebook."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R0e9WYOEV0ho",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%%shell\n",
+        "\n",
+        "git clone https://github.com/stephenjkaplan/snow-grooming-object-detection.git\n",
+        "cp snow-grooming-object-detection/data_acquisition.py ./\n",
+        "cp snow-grooming-object-detection/dataset.py ./\n",
+        "cp snow-grooming-object-detection/utilities.py ./\n",
+        "cp snow-grooming-object-detection/object_detection_api.py ./\n",
+        "cp -R snow-grooming-object-detection/torchvision_scripts ./\n",
+        "\n",
+        "pip install openimages"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -115,8 +137,7 @@
         "\n",
         "**Detectable Objects**\n",
         "\n",
-        "Define list of objects you plan to detect. These must match the data \n",
-        "downloaded in the data acquisition step."
+        "Define list of objects you plan to detect. These must be valid names in the [Google Open Images Dataset](https://storage.googleapis.com/openimages/web/index.html). Use all lower case.\n"
       ]
     },
     {
@@ -186,7 +207,6 @@
         "\n",
         "import numpy as np\n",
         "from PIL import Image\n",
-        "from ytdownloader.downloader import Downloader\n",
         "\n",
         "import cv2\n",
         "import utils\n",
@@ -199,7 +219,7 @@
         "sys.path.append(root_dir)\n",
         "\n",
         "from utilities import train_model, evaluate\n",
-        "from \n",
+        "from data_acquisition import download_google_open_images\n",
         "from dataset import GoogleOpenImageDataset"
       ],
       "execution_count": null,
@@ -247,8 +267,22 @@
         "colab_type": "text"
       },
       "source": [
-        "### Download data."
+        "### Download data.\n",
+        "Pull images and annotated boundary boxes from [Google Open Images Dataset](https://storage.googleapis.com/openimages/web/index.html). Uses `obj_class_labels` list above."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lSh1DcMj3kgo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "download_google_open_images(class_labels=obj_class_labels, limit_per_class=10)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -257,7 +291,8 @@
         "colab_type": "text"
       },
       "source": [
-        "### Explore data format."
+        "### Explore data format.\n",
+        "View the format of each image/annotation entry in the data set for reference."
       ]
     },
     {
@@ -268,7 +303,7 @@
         "colab": {}
       },
       "source": [
-        "dataset = GoogleOpenImageDataset(root_dir, obj_class_labels, max_images_per_class=5000, train=True)"
+        "dataset = GoogleOpenImageDataset(obj_class_labels, max_images_per_class=5000, train=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -281,7 +316,7 @@
         "colab": {}
       },
       "source": [
-        "dataset[40]"
+        "dataset[2]"
       ],
       "execution_count": null,
       "outputs": []
@@ -305,7 +340,8 @@
         "colab_type": "text"
       },
       "source": [
-        "##### Create training / validation / test dataset splits."
+        "### Create training / validation / test dataset splits.\n",
+        "Initialize dataset objects."
       ]
     },
     {
@@ -317,13 +353,23 @@
       },
       "source": [
         "# create 2 versions of the dataset. one used for training \n",
-        "dataset_train = GoogleOpenImageDataset(root_dir, obj_class_labels, max_images_per_class=5000, train=True)\n",
-        "dataset_train_val = GoogleOpenImageDataset(root_dir, obj_class_labels, max_images_per_class=5000, train=True)\n",
-        "dataset_val = GoogleOpenImageDataset(root_dir, obj_class_labels, max_images_per_class=5000)\n",
-        "dataset_test = GoogleOpenImageDataset(root_dir, obj_class_labels, max_images_per_class=5000)"
+        "dataset_train = GoogleOpenImageDataset(obj_class_labels, max_images_per_class=5000, train=True)\n",
+        "dataset_train_val = GoogleOpenImageDataset(obj_class_labels, max_images_per_class=5000, train=True)\n",
+        "dataset_val = GoogleOpenImageDataset(obj_class_labels, max_images_per_class=5000)\n",
+        "dataset_test = GoogleOpenImageDataset(obj_class_labels, max_images_per_class=5000)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9Wh1AKIsAkLB",
+        "colab_type": "text"
+      },
+      "source": [
+        "Define training, validation, and test percents."
+      ]
     },
     {
       "cell_type": "code",
@@ -351,6 +397,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "db0kyzuoArWM",
+        "colab_type": "text"
+      },
+      "source": [
+        "Split data and initialize data loaders."
+      ]
     },
     {
       "cell_type": "code",
@@ -400,7 +456,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##### Define hyperparameters.\n"
+        "### Define hyperparameters.\n"
       ]
     },
     {
@@ -421,7 +477,7 @@
         "gamma = 0.1    # learning rate will be multiplied by gamma every step \n",
         "\n",
         "num_epochs = 10\n",
-        "trainable_layers = 3"
+        "trainable_layers = 3      # trainable backbone layers in neural network. this is the default in PyTorch"
       ],
       "execution_count": null,
       "outputs": []
@@ -433,7 +489,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##### Train Neural Network"
+        "### Train Neural Network"
       ]
     },
     {
@@ -444,7 +500,7 @@
         "colab": {}
       },
       "source": [
-        "train_model(obj_class_labels, trainable_layers, device, learning_rate, momentum, \n",
+        "m = train_model(obj_class_labels, trainable_layers, device, learning_rate, momentum, \n",
         "            weight_decay, step_size, gamma, num_epochs, data_loader_train, \n",
         "            data_loader_val=data_loader_val, score_val=True)"
       ],
@@ -469,7 +525,7 @@
       },
       "source": [
         "#### Train Neural Network\n",
-        "Train final model with ALL training data."
+        "Update hyperparameters above if necessary and rerun the cell. Train final model with ALL training data."
       ]
     },
     {
@@ -481,7 +537,7 @@
       },
       "source": [
         "model = train_model(obj_class_labels, trainable_layers, device, learning_rate, momentum, \n",
-        "                    weight_decay, step_size, gamma, num_epochs=5, \n",
+        "                    weight_decay, step_size, gamma, num_epochs, \n",
         "                    data_loader_train=data_loader_train_val, data_loader_val=data_loader_test) "
       ],
       "execution_count": null,
@@ -531,7 +587,7 @@
         "if not os.path.exists('models'):\n",
         "    os.mkdir('models')\n",
         "\n",
-        "torch.save(model, f'{root_dir}models/final_model.pkl')"
+        "torch.save(model, 'models/final_model.pkl')"
       ],
       "execution_count": null,
       "outputs": []
@@ -554,7 +610,7 @@
         "colab": {}
       },
       "source": [
-        "model = torch.load('/content/drive/My Drive/Colab Notebooks/snow_grooming/models/final_model.pkl')"
+        "model = torch.load('models/final_model.pkl')"
       ],
       "execution_count": null,
       "outputs": []
@@ -644,6 +700,33 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "7Lw_IAgJB7uw",
+        "colab_type": "text"
+      },
+      "source": [
+        "Define colors for each predicted object."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_PWTsXRAB-TR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class_lookup_table = {\n",
+        "    1: (obj_class_labels[0], (255, 0, 0)),\n",
+        "    2: (obj_class_labels[1], (0, 255, 0)),\n",
+        "    3: (obj_class_labels[2], (255, 255, 0)),\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "boAukV5KE3DY",
         "colab_type": "text"
       },
@@ -659,12 +742,6 @@
         "colab": {}
       },
       "source": [
-        "class_lookup_table = {\n",
-        "    1: (obj_class_labels[0], (255, 0, 0)),\n",
-        "    2: (obj_class_labels[1], (0, 255, 0)),\n",
-        "    3: (obj_class_labels[2], (255, 255, 0)),\n",
-        "}\n",
-        "\n",
         "def draw_all_boundary_boxes(image_path, prediction, threshold=0.5):\n",
         "    # get boundary boxes, scores, and labels from prediction\n",
         "    boxes = prediction[0]['boxes'].tolist()\n",
@@ -689,7 +766,7 @@
         "      cv2.putText(image, obj_label, (x1, y2-10), cv2.FONT_HERSHEY_SIMPLEX, 0.8, class_lookup_table[label][1], 2)\n",
         "    #im_arr = cv2.cvtColor(im_arr_bgr, cv2.COLOR_BGR2RGB)\n",
         "    #Image.fromarray(image)\n",
-        "    return image\n"
+        "    return image"
       ],
       "execution_count": null,
       "outputs": []
@@ -729,10 +806,24 @@
         "colab_type": "text"
       },
       "source": [
-        "## Demo\n",
+        "## Apply model to video.\n",
         "\n",
-        "Demo on ski resort video footage."
+        "Set path to video file."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6cD9-nk4CR-h",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "video_file = 'insert_file_path_here.mp4'\n",
+        "output_video_file = 'insert_output_video_path_here.mp4'"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -741,48 +832,8 @@
         "colab_type": "text"
       },
       "source": [
-        "##### Download video from YouTube.\n",
-        "\n"
+        "##### Clean any image frames already in the local directory."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1wHxyTtQJLmQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#video_url = \"https://www.youtube.com/watch?v=3tg_DOaUZ4Y\"\n",
-        "video_url = \"https://www.youtube.com/watch?v=LKBQ0J-RUF8\"\n",
-        "video_quality = 1080 \n",
-        "only_video = True \n",
-        "do_trim = False \n",
-        "start = \"00:28:16\" \n",
-        "end = \"00:28:46\"\n",
-        "#output_file = 'pb600_winchcat_full.mp4'\n",
-        "output_file = 'groomer.mp4'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mFvQuiSGvk3Q",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "yt_d = Downloader(video_url, output_file, quality=video_quality, only_vid=only_video)\n",
-        "yt_d.download()\n",
-        "\n",
-        "if do_trim:\n",
-        "  yt_d.trim(start, end, delete_original=False)\n",
-        "  os.rename('downloaded_vid_trimmed.mp4', 'downloaded_vid.mp4')"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -817,8 +868,7 @@
         "colab": {}
       },
       "source": [
-        "#cap = cv2.VideoCapture('pb600_winchcat_full.mp4')\n",
-        "cap = cv2.VideoCapture('groomer.mp4')\n",
+        "cap = cv2.VideoCapture(video_file)\n",
         "i=0\n",
         "while(cap.isOpened()):\n",
         "    ret, frame = cap.read()\n",
@@ -873,17 +923,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "zDq0ATJ019cU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vdpM5lBXCb4u",
+        "colab_type": "text"
       },
       "source": [
-        "Image.open('frame4900.jpg').convert(\"RGB\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Compile frames back into video."
+      ]
     },
     {
       "cell_type": "code",
@@ -917,9 +964,7 @@
         "    for i in range(len(frame_array)):\n",
         "        # writing to a image array\n",
         "        out.write(frame_array[i])\n",
-        "    out.release()\n",
-        "\n",
-        "convert_frames_to_video(i + 1, root_dir + '/groomer_boxes.mp4', fps=30)"
+        "    out.release()"
       ],
       "execution_count": null,
       "outputs": []
@@ -932,7 +977,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "convert_frames_to_video(i + 1, output_video_file, fps=30)"
       ],
       "execution_count": null,
       "outputs": []
